Added parent id's to separate endpoints