@@ -58,23 +58,23 @@ public class SqlGenerator {
   }
 
   public String generate() throws IllegalArgumentException {
-    return sql(qualifiedTable, rootQuery, false, false);
+    return sql(qualifiedTable, rootQuery, false, false, false);
   }
 
-  public String generateFiles() throws IllegalArgumentException {
-    return sql(qualifiedTable, rootQuery, false, true);
+  public String generateFiles(Boolean global) throws IllegalArgumentException {
+    return sql(qualifiedTable, rootQuery, false, true, global);
   }
 
-  protected String sql(String tableOrSubClause, Query query, Boolean subQuery, Boolean filesQuery)
+  protected String sql(String tableOrSubClause, Query query, Boolean subQuery, Boolean filesQuery, Boolean globalQuery)
       throws IllegalArgumentException {
-    var resultsQuery = resultsQuery(query, tableOrSubClause, subQuery, filesQuery);
+    var resultsQuery = resultsQuery(query, tableOrSubClause, subQuery, filesQuery, globalQuery);
     var resultsAlias = "results";
     return String.format(
         "SELECT %1$s.* EXCEPT(rn) FROM (%2$s) as %1$s WHERE rn = 1", resultsAlias, resultsQuery);
   }
 
   protected String resultsQuery(
-      Query query, String tableOrSubClause, Boolean subQuery, Boolean filesQuery) {
+      Query query, String tableOrSubClause, Boolean subQuery, Boolean filesQuery, Boolean globalQuery) {
     if (query.getNodeType() == Query.NodeTypeEnum.SUBQUERY) {
       // A SUBQUERY is built differently from other queries. The FROM clause is the
       // SQL version of
@@ -82,9 +82,10 @@ public class SqlGenerator {
       // level query.
       return resultsQuery(
           query.getL(),
-          String.format("(%s)", sql(tableOrSubClause, query.getR(), true, filesQuery)),
+          String.format("(%s)", sql(tableOrSubClause, query.getR(), true, filesQuery, globalQuery)),
           subQuery,
-          filesQuery);
+          filesQuery,
+          globalQuery);
     }
 
     String[] parts = entitySchema != null ? entitySchema.x().split("\\.") : new String[0];
@@ -98,14 +99,18 @@ public class SqlGenerator {
             .setIncludeSelect(!subQuery);
 
     Stream<String> entityUnnests =
-        entitySchema != null ? SqlUtil.getUnnestsFromParts(ctx, table, parts, true) : Stream.empty();
+        entitySchema != null
+                ? SqlUtil.getUnnestsFromParts(ctx, table, parts, true, SqlUtil.JoinType.INNER)
+                : Stream.empty();
 
     String[] filesParts =
         Stream.concat(Arrays.stream(parts), Stream.of("Files")).toArray(String[]::new);
     String filesAlias = SqlUtil.getAlias(filesParts.length - 1, filesParts);
 
     Stream<String> filesUnnests =
-        filesQuery ? SqlUtil.getUnnestsFromParts(ctx, table, filesParts, true) : Stream.empty();
+        filesQuery
+                ? SqlUtil.getUnnestsFromParts(ctx, table, filesParts, true, SqlUtil.JoinType.INNER)
+                : Stream.empty();
 
     String condition = ((BasicOperator) query).buildQuery(ctx);
 
@@ -124,41 +129,22 @@ public class SqlGenerator {
               fromClause,
               Stream.of(
                   String.format(
-                      " LEFT JOIN %1$s AS %2$s ON %2$s.id = %3$s",
+                      " %1$s %2$s AS %3$s ON %3$s.id = %4$s",
+                      SqlUtil.JoinType.INNER.value,
                       String.format("%s.%s", this.project, this.fileTable),
                       this.fileTable,
                       filesAlias)));
     }
 
     String fromString = fromClause.distinct().collect(Collectors.joining(" "));
-    Supplier<Stream<String>> selectFields = () -> getSelect(ctx, prefix, !this.modularEntity);
-
-    String finalCondition = String.format("(%1$s AND (%2$s))",
-            condition,
-            selectFields.get().map(select -> {
-              String[] selectParts = select.split(" AS ");
-              String fieldFromAlias = ctx.getAliasMap().get(selectParts[1]);
-              boolean fileField = fieldFromAlias.toLowerCase().startsWith("file.") || fieldFromAlias.startsWith(fileTable);
-
-              String value = fieldFromAlias
-                      .replace(String.format("%s.", table), "")
-                      .replace(String.format("%s.", fileTable), "");
-              var fieldMode =
-                      (fileField ? fileTableSchemaMap : tableSchemaMap)
-                              .get(value)
-                              .getMode();
-              var formatString = fieldMode.equals("REPEATED")
-                      ? "array_length(%s) > 0"
-                      : "%s is not null";
-              return String.format(formatString, selectParts[0]);
-            }).collect(Collectors.joining(" OR ")));
+    Supplier<Stream<String>> selectFields = () -> getSelect(ctx, prefix, !this.modularEntity, globalQuery);
 
     return String.format(
         "SELECT ROW_NUMBER() OVER (PARTITION BY %1$s) as rn, %2$s FROM %3$s WHERE %4$s",
         getPartitionByFields(ctx, ctx.getFilesQuery() ? fileTable : prefix).collect(Collectors.joining(", ")),
         subQuery ? String.format("%s.*", table) : selectFields.get().collect(Collectors.joining(", ")),
         fromString,
-        finalCondition);
+        condition);
   }
 
   protected String baseFromClause(String tableOrSubClause) {
@@ -170,20 +156,24 @@ public class SqlGenerator {
         .distinct();
   }
 
-  protected Stream<String> getSelect(QueryContext ctx, String table, Boolean skipExcludes) {
+  protected Stream<String> getSelect(QueryContext ctx, String table, Boolean skipExcludes, Boolean globalQuery) {
     if (ctx.getSelect().size() > 0) {
       return ctx.getSelect().stream();
     } else {
-      return getSelectsFromEntity(ctx, ctx.getFilesQuery() ? fileTable : table, skipExcludes);
+      return getSelectsFromEntity(ctx, ctx.getFilesQuery() ? fileTable : table, skipExcludes, globalQuery);
     }
   }
 
   protected Stream<String> getSelectsFromEntity(
-      QueryContext ctx, String prefix, Boolean skipExcludes) {
-    return (ctx.getFilesQuery()
-            ? fileTableSchema
-            : entitySchema != null ? Arrays.asList(entitySchema.y().getFields()) : tableSchema)
-        .stream()
+      QueryContext ctx, String prefix, Boolean skipExcludes, Boolean globalQuery) {
+    ctx.addAlias("subject_id", String.format("%s.id", table));
+    return Stream.concat(
+            (ctx.getFilesQuery()
+              ? fileTableSchema
+              : entitySchema != null
+                    ? List.of(entitySchema.y().getFields())
+                    : tableSchema)
+            .stream()
             .filter(
                 definition ->
                     !(ctx.getFilesQuery()
@@ -197,6 +187,11 @@ public class SqlGenerator {
                                       ? String.format("%s.", prefix)
                                       : String.format("%s.", SqlUtil.getAntiAlias(prefix)), definition.getName()));
               return String.format("%1$s.%2$s AS %2$s", prefix, definition.getName());
-            });
+            }),
+            entitySchema != null && !globalQuery
+              ? Stream.concat(
+                    Stream.of(String.format("%s.id AS subject_id", table)),
+                    SqlUtil.getIdSelectsFromPath(ctx, entitySchema.x(), ctx.getFilesQuery()))
+              : Stream.of());
   }
 }
